<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kode.kinopoisk.vedmedenko.ui.activities.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:clipToPadding="false"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/erlSearchSettings"
        android:background="@drawable/search_settings_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ael_duration="300"
        app:ael_expanded="false"
        app:ael_interpolator="accelerateDecelerate"
        app:ael_orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvSettingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_horizontal_margin_titles"
            android:layout_marginStart="@dimen/expandable_layout_horizontal_margin_titles"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/settingDate" />

        <!-- Date Settings -->

        <TextView
            android:id="@+id/tvSettingDateMonth"
            android:layout_below="@id/tvSettingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_left_margin_labels"
            android:layout_marginStart="@dimen/expandable_layout_left_margin_labels"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/stringSettingDateMonth" />

        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_below="@id/tvSettingDate"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_toRightOf="@id/tvSettingDateMonth"
            android:layout_toEndOf="@id/tvSettingDateMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvSettingDateYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_left_margin_labels"
            android:layout_marginStart="@dimen/expandable_layout_left_margin_labels"
            android:layout_below="@id/tvSettingDate"
            android:layout_toRightOf="@id/spinnerMonth"
            android:layout_toEndOf="@id/spinnerMonth"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/stringSettingDateYear" />

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_below="@id/tvSettingDate"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_toRightOf="@id/tvSettingDateYear"
            android:layout_toEndOf="@id/tvSettingDateYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Date Settings -->

        <TextView
            android:id="@+id/tvSettingLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSettingDateMonth"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_horizontal_margin_titles"
            android:layout_marginStart="@dimen/expandable_layout_horizontal_margin_titles"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/settingLocation" />

        <!-- Location Settings -->

        <TextView
            android:id="@+id/tvSettingLocationCountry"
            android:layout_below="@id/tvSettingLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_left_margin_labels"
            android:layout_marginStart="@dimen/expandable_layout_left_margin_labels"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/stringSettingLocationCountry" />

        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_below="@id/tvSettingLocation"
            android:layout_toRightOf="@id/tvSettingLocationCountry"
            android:layout_toEndOf="@id/tvSettingLocationCountry"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvSettingLocationCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_left_margin_labels"
            android:layout_marginStart="@dimen/expandable_layout_left_margin_labels"
            android:layout_below="@id/spinnerCountry"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/stringSettingLocationCity" />

        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_below="@id/spinnerCountry"
            android:layout_toRightOf="@id/tvSettingLocationCity"
            android:layout_toEndOf="@id/tvSettingLocationCity"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Location Settings -->

        <TextView
            android:id="@+id/tvSettingSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSettingLocationCity"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_horizontal_margin_titles"
            android:layout_marginStart="@dimen/expandable_layout_horizontal_margin_titles"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/settingSort" />

        <!-- Sort Settings -->

        <CheckBox
            android:id="@+id/checkBoxGenreSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_left_margin_checkBoxes"
            android:layout_marginStart="@dimen/expandable_layout_left_margin_checkBoxes"
            android:layout_below="@+id/tvSettingSort"
            android:text="@string/stringCheckBoxGenreSort" />

        <Spinner
            android:id="@+id/spinnerGenre"
            android:layout_toRightOf="@id/checkBoxGenreSort"
            android:layout_toEndOf="@id/checkBoxGenreSort"
            android:layout_below="@+id/tvSettingSort"
            android:layout_marginTop="@dimen/expandable_layout_spinner_genre_top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkBoxRatingSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/expandable_layout_vertical_margin"
            android:layout_marginBottom="@dimen/expandable_layout_vertical_margin"
            android:layout_marginLeft="@dimen/expandable_layout_left_margin_checkBoxes"
            android:layout_marginStart="@dimen/expandable_layout_left_margin_checkBoxes"
            android:layout_below="@+id/checkBoxGenreSort"
            android:text="@string/stringCheckBoxRatingSort" />

        <!-- Sort Settings -->

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        style="@style/LargeGreyText"
        android:id="@+id/text_view_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/text_view_hint"
        android:text="@string/stringButtonReload"
        android:visibility="gone" />

</RelativeLayout>
